syntax = "proto3";


package CalCall;

option java_multiple_files = true;
option java_package = "io.grpc.examples.CalCall";
option java_outer_classname = "CalCallProto";
option objc_class_prefix = "HLW";

// 服务端定义
service Greeter {

rpc CallCal(MajongCal) returns (CalReply) {}

}
//麻将的计算调用消息
message MajongCal {
string Rule= 1;
repeated string PlayerCard =2;
string NewCard =3;
}

//麻将计算结果反馈
message CalReply{
repeated string CalResult =1;
}